# statki

./: CMakeLists.txt  source.cpp
include/: libs.h  statki.h
source/: lvl.cpp  obj.cpp  player.cpp  statki.cpp
textures/: ten_syf.xcf
